dbGaP data summary text and short name for data dashboard. Add error state to subject count. Resolves #339.

--- a/src/components/data-study-snapshot-table/data-study-snapshot-table.module.css
+++ b/src/components/data-study-snapshot-table/data-study-snapshot-table.module.css
@@ -10,7 +10,7 @@
     margin-top: 24px;
 }
 
-/* Summary title. */
+/* Title. */
 .summary .title {
     color: var(--accent-blue-dark);
     font-family: "Open Sans", sans-serif;
@@ -19,8 +19,13 @@
     line-height: 24px;
 }
 
-/* Summary sub title. */
+/* Sub title. */
 .summary .subTitle {
     font-size: 12px;
     letter-spacing: 1.12px;
+}
+
+/* Sub title - error. */
+.summary .subTitle.error {
+    color: #b10062;
 }
